# marksplitz

./: .gitignore  Justfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/marksplitz/: marksplitz.py
tests/: test_codefile.py  test_marksplitz.py
